--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>資産運用シミュレーター</title>
     <meta name="description" content="初期資産・毎月積立額・想定リターンを自由に設定して将来の資産を予測するシミュレーター" />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📊</text></svg>" />
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      html, body, #root {
+        min-height: 100%;
+        background: #0a0a0f;
+      }
+      body {
+        background: linear-gradient(145deg, #0a0a0f 0%, #12121f 40%, #0d1117 100%);
+        min-height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
