--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       }
       html, body, #root {
         min-height: 100%;
-        background: #0a0a0f;
+        background: #0f1729;
       }
       body {
-        background: linear-gradient(145deg, #0a0a0f 0%, #12121f 40%, #0d1117 100%);
+        background: linear-gradient(145deg, #0f1729 0%, #1a2744 50%, #0f1729 100%);
         min-height: 100vh;
       }
     </style>
